src/test/deca/codegen/valid/minus_int_minus_int_minus_int_codegen.deca
// Description : 
// 
//      Test contextuellement correct de la soustraction d'un int avec la soustraction d'un int avec la soustraction d'un int.
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int y =3-2-5;
    print(y);
}