src/test/deca/codegen/invalid/modulo_modulo_overflow.deca
// Description :
//
//      Test de programme contextuellement incorrect d'un modulo de deux entiers menant à un overflow.
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    int y =9999998%9999999;
}